# parquet-benchmark

./: .gitignore  Cargo.toml  README.md  bench.py  bench_read.py  run.py  summarize.py  write_parquet.py
benches/: read_pa.rs  read_parquet_arrow.rs  read_parquet_arrow2.rs  write_pa.rs  write_parquet_arrow.rs  write_parquet_arrow2.rs
