[package]
name = "parquet_benchmarks"
version = "0.1.0"
edition = "2018"

[dependencies]
arrow2 = { git = "https://github.com/jorgecarleitao/arrow2", branch = "main", features = ["io_parquet", "io_parquet_compression"] }
arrow = "6"
parquet = "6"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "read_parquet_arrow2"
harness = false

[[bench]]
name = "read_parquet_arrow"
harness = false

[[bench]]
name = "write_parquet_arrow2"
harness = false

[[bench]]
name = "write_parquet_arrow"
harness = false
