[package]
name = "parquet_benchmarks"
version = "0.1.0"
edition = "2018"

[dependencies]
arrow2 = { git = "https://github.com/jorgecarleitao/arrow2", rev = "1b190fc", default-features = false, features = [
    "io_parquet",
    "compute",
    "io_parquet_compression",
    "io_ipc",
] }
pa = { git = "https://github.com/sundy-li/pa", rev = "4b98e51" }
arrow = "29.0.0"
parquet = "29.0.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "read_parquet_arrow2"
harness = false

[[bench]]
name = "read_pa"
harness = false

[[bench]]
name = "write_parquet_arrow2"
harness = false

[[bench]]
name = "write_pa"
harness = false
